<resources>
    <string name="app_name">Popular Movies</string>
    <string name="poster_of_movie">Poster of Movie</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Added to favourite</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Item favourite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="add_movie_to_favourite">Add movie to favourite</string>
    <string name="title">Title:</string>
    <string name="rating">Rating:</string>
    <string name="original_title">Original title:</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_description">Overview:</string>
    <string name="big_poster">Big poster</string>
    <string name="trailers_label">Trailers</string>
    <string name="test_trailer_title">Trailer 1</string>
    <string name="reviews">Reviews</string>
</resources>